# cos-zrobimy-industry-4.0

./: .gitignore  README.md  embedable_chart.html  ptest.py  pyproject.toml  start.bat  start.sh  zapis_róchów.txt
app/: app.py  attic.py  drawing.py  helpers.py  movement.py  packing.py
app/components/: menu.html
app/data/: warehouse.txt
app/py3dbp/: main.py
app/site/: database.html  index.html  order.html  orders.html  style.css
scripts/: Rysowanie.py  czytanie_danych_lista_produktow.py  magazyn.txt  main.py  pruszanie.py  rozkladanie_paczek.py  sortowanie_produktów.py  zapis_róchów.txt
