[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
pillow = "^10.2.0"
numpy = "^1.26.3"
matplotlib = "^3.8.2"
mpld3 = "^0.5.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
